@@ -3,7 +3,7 @@
 	Project              : LabPlot
 	Description          : Base class for all analysis curves
 	--------------------------------------------------------------------
-	SPDX-FileCopyrightText: 2017-2021 Alexander Semke <alexander.semke@web.de>
+	SPDX-FileCopyrightText: 2017-2024 Alexander Semke <alexander.semke@web.de>
 	SPDX-FileCopyrightText: 2018-2022 Stefan Gerlach <stefan.gerlach@uni.kn>
 	SPDX-License-Identifier: GPL-2.0-or-later
 */
@@ -38,7 +38,14 @@ public:
 		FitTanh,
 		FitErrFunc,
 		FitCustom,
-		FourierFilter
+		FourierFilter,
+		FitDistributionGauss,
+		FitDistributionExp,
+		FitDistributionLaplace,
+		FitDistributionCauchyLorentz,
+		FitDistributionLogNormal,
+		FitDistributionPoisson,
+		FitDistributionBinomial
 	};
 
 	struct Result {
@@ -52,6 +59,8 @@ public:
 	};
 
 	~XYAnalysisCurve() override;
+
+	static bool isFitDistribution(AnalysisAction);
 
 	static void copyData(QVector<double>& xData,
 						 QVector<double>& yData,
